<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename_conversation"
        android:orderInCategory="1" />
    <item
        android:id="@+id/action_pin"
        android:title="@string/pin_conversation"
        android:orderInCategory="2" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share_conversation"
        android:orderInCategory="3" />
    <item
        android:id="@+id/action_shortcut"
        android:title="@string/add_to_home_screen"
        android:orderInCategory="4" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_conversation"
        android:orderInCategory="5" />
</menu>
